<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:background="@android:color/transparent"
        android:gravity="end|center_vertical"
        android:text="@string/initial_text"
        android:textColor="#FFFFFF"
        android:textSize="54sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/spacer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textView_result"
        app:layout_constraintBottom_toTopOf="@id/grid_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/button_clear"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_clear"
            android:contentDescription="@string/clear"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_change_sign"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_change_sign"
            android:contentDescription="@string/change_sign"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_root"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_root"
            android:contentDescription="@string/root"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_division"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_division"
            android:contentDescription="@string/division"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>



        <ImageButton
            android:id="@+id/button_seven"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_seven"
            android:contentDescription="@string/seven"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_eight"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_eight"
            android:contentDescription="@string/eight"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_nine"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_nine"
            android:contentDescription="@string/nine"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_multiply"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_multiply"
            android:contentDescription="@string/multiply"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>


        <ImageButton
            android:id="@+id/button_four"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_four"
            android:contentDescription="@string/four"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_five"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_five"
            android:contentDescription="@string/five"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_six"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_six"
            android:contentDescription="@string/six"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_minus"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_minus"
            android:contentDescription="@string/minus"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>


        <ImageButton
            android:id="@+id/button_one"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_one"
            android:contentDescription="@string/one"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_two"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_two"
            android:contentDescription="@string/two"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_three"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_three"
            android:contentDescription="@string/three"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_plus"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_plus"
            android:contentDescription="@string/plus"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_dot"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_dot"
            android:contentDescription="@string/dot"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_zero"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_zero"
            android:contentDescription="@string/zero"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_remove"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_remove"
            android:contentDescription="@string/remove"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>

        <ImageButton
            android:id="@+id/button_equals"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@drawable/button_equals"
            android:contentDescription="@string/equals"
            android:scaleType="fitCenter"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_margin="4dp"/>


    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>